mikec/tests/PASS/1_line/assign/8.mc
/* assign -ve value to int*/
void main(){
  int a;
  a = -2;
}
