mikec/tests/fail/assign/22.mc
/* Assign undeclared value */
void main()
{
	a = 5;
}